qt6/gen_qregularexpression.nim

import Qt6Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6Widgets")
{.compile("gen_qregularexpression.cpp", cflags).}


type QRegularExpressionPatternOption* = cint
const
  QRegularExpressionNoPatternOption* = 0
  QRegularExpressionCaseInsensitiveOption* = 1
  QRegularExpressionDotMatchesEverythingOption* = 2
  QRegularExpressionMultilineOption* = 4
  QRegularExpressionExtendedPatternSyntaxOption* = 8
  QRegularExpressionInvertedGreedinessOption* = 16
  QRegularExpressionDontCaptureOption* = 32
  QRegularExpressionUseUnicodePropertiesOption* = 64



type QRegularExpressionMatchType* = cint
const
  QRegularExpressionNormalMatch* = 0
  QRegularExpressionPartialPreferCompleteMatch* = 1
  QRegularExpressionPartialPreferFirstMatch* = 2
  QRegularExpressionNoMatch* = 3



type QRegularExpressionMatchOption* = cint
const
  QRegularExpressionNoMatchOption* = 0
  QRegularExpressionAnchorAtOffsetMatchOption* = 1
  QRegularExpressionAnchoredMatchOption* = 1
  QRegularExpressionDontCheckSubjectStringMatchOption* = 2



type QRegularExpressionWildcardConversionOption* = cint
const
  QRegularExpressionDefaultWildcardConversion* = 0
  QRegularExpressionUnanchoredWildcardConversion* = 1



import gen_qregularexpression_types
export gen_qregularexpression_types


type cQRegularExpression*{.exportc: "QRegularExpression", incompleteStruct.} = object
type cQRegularExpressionMatch*{.exportc: "QRegularExpressionMatch", incompleteStruct.} = object
type cQRegularExpressionMatchIterator*{.exportc: "QRegularExpressionMatchIterator", incompleteStruct.} = object

proc fcQRegularExpression_new(): ptr cQRegularExpression {.importc: "QRegularExpression_new".}
proc fcQRegularExpression_new2(pattern: struct_miqt_string): ptr cQRegularExpression {.importc: "QRegularExpression_new2".}
proc fcQRegularExpression_new3(re: pointer): ptr cQRegularExpression {.importc: "QRegularExpression_new3".}
proc fcQRegularExpression_new4(pattern: struct_miqt_string, options: cint): ptr cQRegularExpression {.importc: "QRegularExpression_new4".}
proc fcQRegularExpression_patternOptions(self: pointer, ): cint {.importc: "QRegularExpression_patternOptions".}
proc fcQRegularExpression_setPatternOptions(self: pointer, options: cint): void {.importc: "QRegularExpression_setPatternOptions".}
proc fcQRegularExpression_operatorAssign(self: pointer, re: pointer): void {.importc: "QRegularExpression_operatorAssign".}
proc fcQRegularExpression_swap(self: pointer, other: pointer): void {.importc: "QRegularExpression_swap".}
proc fcQRegularExpression_pattern(self: pointer, ): struct_miqt_string {.importc: "QRegularExpression_pattern".}
proc fcQRegularExpression_setPattern(self: pointer, pattern: struct_miqt_string): void {.importc: "QRegularExpression_setPattern".}
proc fcQRegularExpression_isValid(self: pointer, ): bool {.importc: "QRegularExpression_isValid".}
proc fcQRegularExpression_patternErrorOffset(self: pointer, ): int64 {.importc: "QRegularExpression_patternErrorOffset".}
proc fcQRegularExpression_errorString(self: pointer, ): struct_miqt_string {.importc: "QRegularExpression_errorString".}
proc fcQRegularExpression_captureCount(self: pointer, ): cint {.importc: "QRegularExpression_captureCount".}
proc fcQRegularExpression_namedCaptureGroups(self: pointer, ): struct_miqt_array {.importc: "QRegularExpression_namedCaptureGroups".}
proc fcQRegularExpression_match(self: pointer, subject: struct_miqt_string): pointer {.importc: "QRegularExpression_match".}
proc fcQRegularExpression_globalMatch(self: pointer, subject: struct_miqt_string): pointer {.importc: "QRegularExpression_globalMatch".}
proc fcQRegularExpression_optimize(self: pointer, ): void {.importc: "QRegularExpression_optimize".}
proc fcQRegularExpression_escape(str: struct_miqt_string): struct_miqt_string {.importc: "QRegularExpression_escape".}
proc fcQRegularExpression_wildcardToRegularExpression(str: struct_miqt_string): struct_miqt_string {.importc: "QRegularExpression_wildcardToRegularExpression".}
proc fcQRegularExpression_anchoredPattern(expression: struct_miqt_string): struct_miqt_string {.importc: "QRegularExpression_anchoredPattern".}
proc fcQRegularExpression_operatorEqual(self: pointer, re: pointer): bool {.importc: "QRegularExpression_operatorEqual".}
proc fcQRegularExpression_operatorNotEqual(self: pointer, re: pointer): bool {.importc: "QRegularExpression_operatorNotEqual".}
proc fcQRegularExpression_match2(self: pointer, subject: struct_miqt_string, offset: int64): pointer {.importc: "QRegularExpression_match2".}
proc fcQRegularExpression_match3(self: pointer, subject: struct_miqt_string, offset: int64, matchType: cint): pointer {.importc: "QRegularExpression_match3".}
proc fcQRegularExpression_match4(self: pointer, subject: struct_miqt_string, offset: int64, matchType: cint, matchOptions: cint): pointer {.importc: "QRegularExpression_match4".}
proc fcQRegularExpression_globalMatch2(self: pointer, subject: struct_miqt_string, offset: int64): pointer {.importc: "QRegularExpression_globalMatch2".}
proc fcQRegularExpression_globalMatch3(self: pointer, subject: struct_miqt_string, offset: int64, matchType: cint): pointer {.importc: "QRegularExpression_globalMatch3".}
proc fcQRegularExpression_globalMatch4(self: pointer, subject: struct_miqt_string, offset: int64, matchType: cint, matchOptions: cint): pointer {.importc: "QRegularExpression_globalMatch4".}
proc fcQRegularExpression_wildcardToRegularExpression2(str: struct_miqt_string, options: cint): struct_miqt_string {.importc: "QRegularExpression_wildcardToRegularExpression2".}
proc fcQRegularExpression_delete(self: pointer) {.importc: "QRegularExpression_delete".}
proc fcQRegularExpressionMatch_new(): ptr cQRegularExpressionMatch {.importc: "QRegularExpressionMatch_new".}
proc fcQRegularExpressionMatch_new2(match: pointer): ptr cQRegularExpressionMatch {.importc: "QRegularExpressionMatch_new2".}
proc fcQRegularExpressionMatch_operatorAssign(self: pointer, match: pointer): void {.importc: "QRegularExpressionMatch_operatorAssign".}
proc fcQRegularExpressionMatch_swap(self: pointer, other: pointer): void {.importc: "QRegularExpressionMatch_swap".}
proc fcQRegularExpressionMatch_regularExpression(self: pointer, ): pointer {.importc: "QRegularExpressionMatch_regularExpression".}
proc fcQRegularExpressionMatch_matchType(self: pointer, ): cint {.importc: "QRegularExpressionMatch_matchType".}
proc fcQRegularExpressionMatch_matchOptions(self: pointer, ): cint {.importc: "QRegularExpressionMatch_matchOptions".}
proc fcQRegularExpressionMatch_hasMatch(self: pointer, ): bool {.importc: "QRegularExpressionMatch_hasMatch".}
proc fcQRegularExpressionMatch_hasPartialMatch(self: pointer, ): bool {.importc: "QRegularExpressionMatch_hasPartialMatch".}
proc fcQRegularExpressionMatch_isValid(self: pointer, ): bool {.importc: "QRegularExpressionMatch_isValid".}
proc fcQRegularExpressionMatch_lastCapturedIndex(self: pointer, ): cint {.importc: "QRegularExpressionMatch_lastCapturedIndex".}
proc fcQRegularExpressionMatch_hasCaptured(self: pointer, name: struct_miqt_string): bool {.importc: "QRegularExpressionMatch_hasCaptured".}
proc fcQRegularExpressionMatch_hasCapturedWithNth(self: pointer, nth: cint): bool {.importc: "QRegularExpressionMatch_hasCapturedWithNth".}
proc fcQRegularExpressionMatch_captured(self: pointer, ): struct_miqt_string {.importc: "QRegularExpressionMatch_captured".}
proc fcQRegularExpressionMatch_capturedWithName(self: pointer, name: struct_miqt_string): struct_miqt_string {.importc: "QRegularExpressionMatch_capturedWithName".}
proc fcQRegularExpressionMatch_capturedTexts(self: pointer, ): struct_miqt_array {.importc: "QRegularExpressionMatch_capturedTexts".}
proc fcQRegularExpressionMatch_capturedStart(self: pointer, ): int64 {.importc: "QRegularExpressionMatch_capturedStart".}
proc fcQRegularExpressionMatch_capturedLength(self: pointer, ): int64 {.importc: "QRegularExpressionMatch_capturedLength".}
proc fcQRegularExpressionMatch_capturedEnd(self: pointer, ): int64 {.importc: "QRegularExpressionMatch_capturedEnd".}
proc fcQRegularExpressionMatch_capturedStartWithName(self: pointer, name: struct_miqt_string): int64 {.importc: "QRegularExpressionMatch_capturedStartWithName".}
proc fcQRegularExpressionMatch_capturedLengthWithName(self: pointer, name: struct_miqt_string): int64 {.importc: "QRegularExpressionMatch_capturedLengthWithName".}
proc fcQRegularExpressionMatch_capturedEndWithName(self: pointer, name: struct_miqt_string): int64 {.importc: "QRegularExpressionMatch_capturedEndWithName".}
proc fcQRegularExpressionMatch_captured1(self: pointer, nth: cint): struct_miqt_string {.importc: "QRegularExpressionMatch_captured1".}
proc fcQRegularExpressionMatch_capturedStart1(self: pointer, nth: cint): int64 {.importc: "QRegularExpressionMatch_capturedStart1".}
proc fcQRegularExpressionMatch_capturedLength1(self: pointer, nth: cint): int64 {.importc: "QRegularExpressionMatch_capturedLength1".}
proc fcQRegularExpressionMatch_capturedEnd1(self: pointer, nth: cint): int64 {.importc: "QRegularExpressionMatch_capturedEnd1".}
proc fcQRegularExpressionMatch_delete(self: pointer) {.importc: "QRegularExpressionMatch_delete".}
proc fcQRegularExpressionMatchIterator_new(): ptr cQRegularExpressionMatchIterator {.importc: "QRegularExpressionMatchIterator_new".}
proc fcQRegularExpressionMatchIterator_new2(iteratorVal: pointer): ptr cQRegularExpressionMatchIterator {.importc: "QRegularExpressionMatchIterator_new2".}
proc fcQRegularExpressionMatchIterator_operatorAssign(self: pointer, iteratorVal: pointer): void {.importc: "QRegularExpressionMatchIterator_operatorAssign".}
proc fcQRegularExpressionMatchIterator_swap(self: pointer, other: pointer): void {.importc: "QRegularExpressionMatchIterator_swap".}
proc fcQRegularExpressionMatchIterator_isValid(self: pointer, ): bool {.importc: "QRegularExpressionMatchIterator_isValid".}
proc fcQRegularExpressionMatchIterator_hasNext(self: pointer, ): bool {.importc: "QRegularExpressionMatchIterator_hasNext".}
proc fcQRegularExpressionMatchIterator_next(self: pointer, ): pointer {.importc: "QRegularExpressionMatchIterator_next".}
proc fcQRegularExpressionMatchIterator_peekNext(self: pointer, ): pointer {.importc: "QRegularExpressionMatchIterator_peekNext".}
proc fcQRegularExpressionMatchIterator_regularExpression(self: pointer, ): pointer {.importc: "QRegularExpressionMatchIterator_regularExpression".}
proc fcQRegularExpressionMatchIterator_matchType(self: pointer, ): cint {.importc: "QRegularExpressionMatchIterator_matchType".}
proc fcQRegularExpressionMatchIterator_matchOptions(self: pointer, ): cint {.importc: "QRegularExpressionMatchIterator_matchOptions".}
proc fcQRegularExpressionMatchIterator_delete(self: pointer) {.importc: "QRegularExpressionMatchIterator_delete".}


func init*(T: type QRegularExpression, h: ptr cQRegularExpression): QRegularExpression =
  T(h: h)
proc create*(T: type QRegularExpression, ): QRegularExpression =

  QRegularExpression.init(fcQRegularExpression_new())
proc create*(T: type QRegularExpression, pattern: string): QRegularExpression =

  QRegularExpression.init(fcQRegularExpression_new2(struct_miqt_string(data: pattern, len: csize_t(len(pattern)))))
proc create*(T: type QRegularExpression, re: QRegularExpression): QRegularExpression =
